# tap-zendesk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_zendesk/: __init__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  conftest.py  test_client.py  test_core.py
